# RPC

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  FASTRPC_LICENSE.txt  Makefile  Makefile.am.in  README.html  README.md  README.odt  README.txt  README_fastrpc.odt  README_rpcdds.odt  README_rpcrest.odt  RPCDDS_LICENSE.txt  RPCREST_LICENSE.txt  colcon.pkg  configure_fastrpc.ac  configure_rpcdds.ac  configure_rpcdds.ac.in  configure_rpcrest.ac  doxyfile.in  package.xml  rpc.repos
examples/: CMakeLists.txt
examples/C++/Calculator/: CalculatorAsyncSupport.cxx  CalculatorAsyncSupport.h  CalculatorClient-x64Win64VS2010.vcxproj.filters  CalculatorClientRPCSupport.h  CalculatorPlugin.cxx  CalculatorProxy.h  CalculatorRequestReply.cxx  CalculatorRequestReplySupport.cxx  CalculatorRequestReplyUtils.h  CalculatorServerImpl.cxx  CalculatorServerImpl.h  CalculatorServerRPCSupport.h  Client.cxx  MessageHeaderSupport.cxx  README.txt  makefile_i86Linux2.6gcc4.4.5  makefile_x64Linux2.6gcc4.4.5
examples/C++/CalculatorAsync/: Calculator-i86Win32VS2010.sln  CalculatorPlugin.h  CalculatorProxy.cxx  CalculatorRequestReply.h  CalculatorRequestReply.idl  CalculatorRequestReplyPlugin.cxx  CalculatorRequestReplySupport.cxx  CalculatorServer-x64Win64VS2010.vcxproj  CalculatorServer-x64Win64VS2010.vcxproj.filters  CalculatorServer.h  CalculatorServerImpl.cxx  CalculatorServerImpl.h  CalculatorServerRPCSupport.cxx  CalculatorServerRPCSupport.h  CalculatorSupport.cxx  Client.cxx  README.txt  Server.cxx  makefile_x64Linux2.6gcc4.5.1
examples/C++/CalculatorTCP/: Calculator-i86Win32VS2010.sln  Calculator.cxx  Calculator.h  CalculatorAsyncSupport.cxx  CalculatorAsyncSupport.h  CalculatorClient-i86Win32VS2010.vcxproj  CalculatorClient-x64Win64VS2010.vcxproj  CalculatorClientRPCSupport.cxx  CalculatorPlugin.cxx  CalculatorRequestReplyPlugin.cxx  CalculatorRequestReplyPlugin.h  CalculatorRequestReplySupport.h  CalculatorRequestReplyUtils.cxx  CalculatorRequestReplyUtils.h  CalculatorServer-i86Win32VS2010.vcxproj  CalculatorServer-x64Win64VS2010.vcxproj  CalculatorServer-x64Win64VS2010.vcxproj.filters  Client.cxx  MessageHeader.h  MessageHeaderPlugin.h  MessageHeaderSupport.h  README.txt  Server.cxx  makefile_i86Linux2.6gcc4.4.3
examples/C++/HelloWorld/: Client.cxx  HelloWorld.cxx  HelloWorld.h  HelloWorld.idl  HelloWorldPlugin.cxx  HelloWorldPlugin.h  HelloWorldSupport.cxx  HelloWorldSupport.h  RateGenClient-vs2005.vcproj  RateGenClientRemoteServiceSupport.cxx  RateGenClientRemoteServiceSupport.h  RateGenProxy.cxx  RateGenProxy.h  RateGenRequestReply.cxx  RateGenRequestReply.h  RateGenRequestReply.idl  RateGenRequestReplyPlugin.cxx  RateGenRequestReplyPlugin.h  RateGenRequestReplySupport.cxx  RateGenRequestReplySupport.h  RateGenRequestReplyUtils.cxx  RateGenRequestReplyUtils.h  RateGenServer-vs2005.vcproj  RateGenServer.cxx  RateGenServer.h  RateGenServerImpl.cxx  RateGenServerImpl.h  RateGenServerRemoteServiceSupport.cxx  RateGenServerRemoteServiceSupport.h  example.bat
examples/C++/HelloWorld - One client in two threads/: Client.cxx  HelloWorld.cxx  HelloWorldPlugin.cxx  HelloWorldSupport.cxx  RateGen-vs2005.sln  RateGenClient-vs2005.vcproj  RateGenProxy.h  RateGenRequestReply.cxx  RateGenRequestReplyPlugin.cxx  RateGenRequestReplyPlugin.h  RateGenRequestReplySupport.cxx  RateGenRequestReplyUtils.h  RateGenServer-vs2005.vcproj  RateGenServer.h  RateGenServerImpl.cxx  RateGenServerImpl.h  RateGenServerRemoteServiceSupport.cxx  RateGenServerRemoteServiceSupport.h  Server.cxx
examples/C++/HelloWorld - Two client in their own threads/: Client.cxx  HelloWorld.h  HelloWorld.idl  HelloWorldPlugin.h  HelloWorldSupport.h  RateGenClientRemoteServiceSupport.cxx  RateGenClientRemoteServiceSupport.h  RateGenProxy.cxx  RateGenRequestReply.h  RateGenRequestReply.idl  RateGenRequestReplySupport.h  RateGenRequestReplyUtils.cxx  RateGenServer.cxx
src/: CMakeLists.txt  Makefile.am.in  ddscs.rc  ddsrpc.rc  fastrpc.rc  platforms  rpcdds.rc
src/client/: AsyncTask.cpp  AsyncThread.cpp  Client.cpp  ClientRPC.cpp  ClientRemoteService.cpp  ClientTemplate.cpp  DDSCSClient.cpp  Proxy.cpp  main.cpp
src/exceptions/: BadParamException.cpp  ClientInternalException.cpp  Exception.cpp  IncompatibleException.cpp  InitializeException.cpp  ServerInternalException.cpp  ServerNotFoundException.cpp  ServerTimeoutException.cpp  SystemException.cpp  UserException.cpp
src/idl/opendds/: MessageHeaderC.cpp  MessageHeaderTypeSupportImpl.cpp
src/idl/rti/: MessageHeader.cxx  MessageHeaderPlugin.cxx  MessageHeaderSupport.cxx
src/protocols/dds/: MessageHeader.cpp  MessageHeaderCdrAux.ipp  MessageHeaderPlugin.cpp  MessageHeaderv1.cpp
src/protocols/rest/: FastBuffer.cpp  HTTPEntities.cpp  HTTPSerializer.cpp  RESTSerializer.cpp
src/server/: DDSCSServer.cpp  Server.cpp  ServerRPC.cpp  ServerRemoteService.cpp  ServerTemplate.cpp  main.cpp
src/strategies/: SingleThreadStrategy.cpp  ThreadPerRequestStrategy.cpp  ThreadPoolStrategy.cpp
src/transports/: AsyncTask.cpp  HttpProxyTransport.cpp  HttpServerTransport.cpp  HttpTransport.cpp  TCPProxyTransport.cpp  TCPServerTransport.cpp  TCPTransport.cpp  UDPTransport.cpp  connection.cpp
src/transports/components/: TCPEndpoint.cpp  TCPEndpoint.h
src/transports/dds/: AsyncThread.cpp  AsyncThread.h  DDSAsyncTask.cpp  DDSTCPProxyTransport.cpp  DDSTCPServerTransport.cpp  DDSUDPProxyTransport.cpp  DDSUDPServerTransport.cpp  ProxyTransport.cpp  RTPSAsyncTask.cpp  RTPSProxyTransport.cpp  RTPSServerTransport.cpp  RTPSTransport.cpp  ServerTransport.cpp  TCPProxyTransport.cpp  TCPServerTransport.cpp  Transport.cpp  UDPProxyTransport.cpp  UDPServerTransport.cpp
src/typeTemplates/: function1TemplateReply.cxx  function1TemplateReplyPlugin.cxx  function1TemplateReplySupport.cxx  function1TemplateReplyUtils.cpp  function1TemplateRequest.cxx  function1TemplateRequestPlugin.cxx  function1TemplateRequestSupport.cxx  function1TemplateRequestUtils.cpp
src/utils/: Middleware.cpp  Thread.cpp  ThreadPoolManager.cpp  Utilities.cpp
src/utils/dds/: Middleware.cpp
test/blackbox/: CMakeLists.txt
(+4103 files in other folders)
